--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <aspectj.version>1.9.6</aspectj.version>
         <allure.version>2.13.9</allure.version>
         <allure-maven.version>2.10.0</allure-maven.version>
+        <lombok.version>1.18.8</lombok.version>
+        <javafaker.version>1.0.2</javafaker.version>
+        <log4j-core.version>2.14.1</log4j-core.version>
+        <jackson-dataformat-yaml.version>2.12.3</jackson-dataformat-yaml.version>
         <suiteXmlFile>src/test/resources/smoke.xml</suiteXmlFile>
         <test.param>${USER}</test.param>
         <test.param>${PASSWORD}</test.param>
@@ -77,6 +81,30 @@
             <artifactId>allure-testng</artifactId>
             <version>${allure.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j-core.version}</version>
+        </dependency>
+        <!--Для считывания yaml-файлов -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson-dataformat-yaml.version}</version>
         </dependency>
     </dependencies>
 </project>
